--- a/frontend/src/app/components/albums-list/albums-list.component.scss
+++ b/frontend/src/app/components/albums-list/albums-list.component.scss
@@ -8,11 +8,15 @@ table{
     width: 50px;
   }
 
-  .avatar{
+  .release, .artist{
+    width: 150px;
+  }
+
+  .cover{
     width: 200px;
   }
 
-  .name{
+  .title{
     width: 300px;
   }
 
@@ -20,7 +24,7 @@ table{
     width: 150px;
   }
 
-  .img-avatar{
+  .img-cover{
     width: 100px;
     height: 100px;
     border-radius: 50%;
