--- a/frontend/src/app/components/artists-list/artists-list.component.html
+++ b/frontend/src/app/components/artists-list/artists-list.component.html
@@ -1,1 +1,22 @@
-<p>artists-list works!</p>
+<div *ngIf="artists">
+  <table class="table table-striped table-responsive">
+    <thead>
+    <th class="id">#</th>
+    <th class="avatar">Avatar</th>
+    <th class="name">Name</th>
+    <th class="action"></th>
+    </thead>
+    <tbody>
+    <tr *ngFor="let artist of artists">
+      <th scope="row">{{artist.id}}</th>
+      <td>
+        <img class="img-avatar" src="assets/avatars/{{artist.avatar}}" alt="Artist avatar">
+      </td>
+      <td>{{artist.name}}</td>
+      <td>
+        <div class="btn btn-primary">SHOW</div>
+      </td>
+    </tr>
+    </tbody>
+  </table>
+</div>
