add cards artists + début routing

--- a/frontend/src/app/components/app.component.html
+++ b/frontend/src/app/components/app.component.html
@@ -1,20 +1,19 @@
-<div class="container">
-  <div class="card">
-    <div class="card-header">
-      <h1>Spotilike</h1>
-    </div>
-    <div class="card-body">
-      <div class="row">
-        <div class="col-md-6">
-          <app-artists-list></app-artists-list>
-        </div>
-        <div class="col-md-6">
-          <app-albums-list></app-albums-list>
-        </div>
-      </div>
-    </div>
-    <div class="card-footer">
-      <p>Maxime Etcheverria & Julien Ousmer © All rights reserved</p>
-    </div>
-  </div>
-</div>
+<!--<div class="container">-->
+<!--  <app-artists-list></app-artists-list>-->
+<!--  <app-albums-list></app-albums-list>-->
+<!--</div>-->
+
+<!--<footer class="footer">-->
+<!--  <div class="d-flex justify-content-between">-->
+<!--    <div>-->
+<!--      <img class="img-logo-footer spotilike" src="assets/images/spotilike.png" alt="Spotilike Logo">-->
+<!--      Maxime Etcheverria | Julien Ousmer-->
+<!--    </div>-->
+<!--    <a target="_blank" href="https://github.com/Borloo/express-spotilike">-->
+<!--      <img class="img-logo-footer" src="assets/images/github.png" alt="GitHub Logo">-->
+<!--    </a>-->
+<!--    <span>© 2024, All rights reserved</span>-->
+<!--  </div>-->
+<!--</footer>-->
+
+<router-outlet></router-outlet>
