--- a/frontend/src/app/components/albums-list/albums-list.component.html
+++ b/frontend/src/app/components/albums-list/albums-list.component.html
@@ -18,7 +18,7 @@
       <td>{{album.release_date}}</td>
       <td>{{album.artist.name}}</td>
       <td>
-        <div class="btn btn-primary">SHOW</div>
+        <div class="btn btn-primary">Voir plus</div>
       </td>
     </tr>
     </tbody>
