--- a/frontend/src/app/components/artists-list/artists-list.component.scss
+++ b/frontend/src/app/components/artists-list/artists-list.component.scss
@@ -1,28 +1,44 @@
-table{
-  width: 90%;
-  text-align: center;
-  margin-left: auto;
-  margin-right: auto;
+$main-color : #4a4c4b;
+$secondary-color: #b0b0b0;
 
-  .id{
-    width: 50px;
-  }
+.titles-artists {
+  color: $main-color;
+  width: fit-content;
+  padding: 10px;
+  border-radius: 20px;
 
-  .avatar{
-    width: 200px;
-  }
+}
 
-  .name{
-    width: 300px;
-  }
-
-  .action{
-    width: 150px;
-  }
-
-  .img-avatar{
-    width: 100px;
-    height: 100px;
-    border-radius: 50%;
+.card-artist {
+  padding: 20px;
+  color: white !important;
+  background-image: linear-gradient(to right top, #222324, #2e3031, #3c3e3e, #4a4c4b, #5a5b59);
+  border: 1px solid #464141;
+  border-radius: 8px;
+  -webkit-box-shadow: 4px 4px 12px 8px #dddddd;
+  -moz-box-shadow: 4px 4px 12px 8px #dddddd;
+  box-shadow: 4px 4px 12px 8px #dddddd;
+  transition: all 0.6s ease-out;
+  &:hover {
+    transform: scale(1.03);
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+    border:none;
   }
 }
+
+a {
+  text-decoration: none;
+  color: inherit;
+}
+
+.img-avatar {
+  max-width: 200px;
+  max-height: 200px;
+  border-radius: 50%;
+}
+
+.artist-annotation {
+  color: $secondary-color;
+}
+
+
