add artists to database

--- a/frontend/src/app/components/app.component.html
+++ b/frontend/src/app/components/app.component.html
@@ -1,7 +1,7 @@
 <nav>
   <app-navigation></app-navigation>
 </nav>
-<body>
+<main>
   <router-outlet></router-outlet>
-</body>
+</main>
 <app-footer></app-footer>
