--- a/frontend/src/app/components/app.component.html
+++ b/frontend/src/app/components/app.component.html
@@ -1,7 +1,7 @@
 <nav>
   <app-navigation></app-navigation>
 </nav>
-<main>
+<body>
   <router-outlet></router-outlet>
-</main>
+</body>
 <app-footer></app-footer>
