--- a/frontend/src/app/components/footer/footer.component.scss
+++ b/frontend/src/app/components/footer/footer.component.scss
@@ -1,8 +1,8 @@
 .footer {
-  position: fixed;
-  bottom: 0;
+  position: sticky;
   width: 100%;
   height: 15%;
+  bottom: 0;
   background-color: rgba(0, 0, 0, .1);
   border: solid rgba(0, 0, 0, .15);
   border-width: 1px 0;
