--- a/frontend/src/app/components/navigation/navigation.component.html
+++ b/frontend/src/app/components/navigation/navigation.component.html
@@ -6,6 +6,6 @@
     </a>
   </div>
   <div class="menu-item">
-    <button routerLink="/account/login" type="button" class="btn btn-success">Login</button>
+    <button [routerLink]="['/account/login']" type="button" class="btn btn-success">Login</button>
   </div>
 </div>
