fix images artists + add tailwind

--- a/frontend/src/app/components/artists-list/artists-list.component.html
+++ b/frontend/src/app/components/artists-list/artists-list.component.html
@@ -1,29 +1,24 @@
-<h3 class="titles-artists">
-  Artists
-</h3>
-<div *ngIf="artists" class="row gap-3">
-  <div *ngFor="let artist of artists" class="col-3 card-artist">
-    <a class="h-100 w-100" (click)="setCurrentArtist(artist)"
-       [routerLink]="['/artist/detail', artist.id]" routerLinkActive="activeLinkClass" href="#">
-      <div class="d-flex justify-content-center align-items-center">
-        <img class="img-avatar" src="assets/avatars/{{artist.avatar}}" alt="Artist avatar">
-      </div>
-      <div class="p-2">
-        <h3 class="m-0">
-          {{ artist.name }}
-        </h3>
-        <p class="artist-annotation small">Artist</p>
-      </div>
-    </a>
-  </div>
-    <div *ngIf="artists.length%3 != 0" class="col-3 card-artist">
-      <a class="h-100 w-100" routerLinkActive="activeLinkClass" href="#">
+<div class="container">
+  <h3 class="titles-artists">
+    Artists
+  </h3>
+  <h1 class="font-bold underline bg-white px-6 pt-10 pb-8">
+test ici tailwind
+  </h1>
+  <div *ngIf="artists" class="row gap-3">
+    <div *ngFor="let artist of artists" class="col-2 card-artist">
+      <a class="h-100 w-100" (click)="setCurrentArtist(artist)"
+         [routerLink]="['/artist/detail', artist.id]" routerLinkActive="activeLinkClass" href="#">
+        <div class="d-flex justify-content-center align-items-center">
+          <img class="img-avatar" src="assets/avatars/{{artist.avatar}}" alt="Artist avatar">
+        </div>
+        <div class="p-2">
           <h3 class="m-0">
-            Artists
+            {{ artist.name }}
           </h3>
-        <div class="position-absolute bottom-0">
-          <i class="fa-solid fa-arrow-right fa-2xl"></i>
+          <p class="artist-annotation small">Artist</p>
         </div>
       </a>
     </div>
+  </div>
 </div>
