--- a/frontend/src/app/components/albums-list/albums-list.component.html
+++ b/frontend/src/app/components/albums-list/albums-list.component.html
@@ -12,7 +12,7 @@
     <tr *ngFor="let album of albums">
       <th scope="row">{{album.id}}</th>
       <td>
-        <img class="img-cover" src="assets/covers/{{album.cover_image}}" alt="Artist avatar">
+        <img class="img-cover" src="assets/covers/{{album.cover_image}}" alt="Album cover">
       </td>
       <td>{{album.title}}</td>
       <td>{{album.release_date}}</td>
