--- a/frontend/src/app/components/footer/footer.component.scss
+++ b/frontend/src/app/components/footer/footer.component.scss
@@ -13,8 +13,11 @@
 .img-logo-footer {
   width: 30px !important;
   height: 30px !important;
+  margin-right: 10px;
 }
-
+.fonda {
+  border-radius: 50%;
+}
 .spotilike {
   rotate: 180deg;
 }
