--- a/frontend/src/app/components/navigation/navigation.component.scss
+++ b/frontend/src/app/components/navigation/navigation.component.scss
@@ -6,3 +6,12 @@
     color: black;
   }
 }
+
+.img-logo-footer {
+  width: 30px !important;
+  height: 30px !important;
+}
+
+.spotilike {
+  rotate: 180deg;
+}
