--- a/frontend/src/app/components/home/home.component.html
+++ b/frontend/src/app/components/home/home.component.html
@@ -1,4 +1,4 @@
-<div class="row">
+<div class="row mb-3">
   <div class="col-md-3"></div>
   <div class="col-md-2">
     <div class="btn btn-artists" id="btn-artists" (click)="click_artists()">
