Delete jwt from local storage when logout + adaptation login button nav

--- a/frontend/src/app/components/navigation/navigation.component.html
+++ b/frontend/src/app/components/navigation/navigation.component.html
@@ -7,5 +7,6 @@
   </div>
   <div class="menu-item">
     <button *ngIf="!this.is_auth" [routerLink]="['/account/login']" type="button" class="btn btn-outline-success">Login</button>
+    <button *ngIf="this.is_auth" [routerLink]="['/account/logout']" type="button" class="btn btn-outline-danger">Logout</button>
   </div>
 </div>
