--- a/frontend/src/app/components/album-detail/album-detail.component.html
+++ b/frontend/src/app/components/album-detail/album-detail.component.html
@@ -1,1 +1,5 @@
-<p>album-detail works!</p>
+<div class="container-fluid vh-100">
+  <div *ngFor="let song of songs">
+    {{ song.title }}
+  </div>
+</div>
