--- a/frontend/src/app/components/home/home.component.html
+++ b/frontend/src/app/components/home/home.component.html
@@ -1,19 +1,12 @@
-<div class="row mb-3">
-  <div class="col-md-3"></div>
-  <div class="col-md-2">
-    <div class="btn btn-artists" id="btn-artists" (click)="click_artists()">
-      <h3 style="text-align: end">Artists</h3>
-    </div>
+<div class="d-flex justify-content-around w-100 mb-3">
+  <div class="btn-menu-choices" id="btn-artists" (click)="click_artists()">
+    <h3 style="text-align: end">Artists</h3>
   </div>
-  <div class="col-md-2"></div>
-  <div class="col-md-2">
-    <div class="btn btn-albums" id="btn-albums" (click)="click_albums()">
-      <h3 style="text-align: end">Albums</h3>
-    </div>
+  <div class="btn-menu-choices" id="btn-albums" (click)="click_albums()">
+    <h3 style="text-align: end">Albums</h3>
   </div>
-  <div class="col-md-3"></div>
 </div>
-<div class="row">
+<div class="row w-100">
   <div *ngIf="this.artists;then artists_content else albums_content">
   </div>
   <ng-template #artists_content>
