--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -1,6 +1,8 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
-$main-color : #4a4c4b;
-$secondary-color: #b0b0b0;
+:root {
+  --main-color: #4a4c4b;
+  --secondary-color: #b0b0b0;
+  --spotilike-color: #1db954;
+}
