Final code update before merge in master

--- a/frontend/src/app/components/navigation/navigation.component.html
+++ b/frontend/src/app/components/navigation/navigation.component.html
@@ -1,6 +1,6 @@
 <div class="d-flex justify-content-between w-100">
   <div class="menu-item">
-    <a href="#">
+    <a href="home">
       <img class="img-logo-footer spotilike" src="assets/images/spotilike.png" alt="Logo Spotilike">
       Spotilike
     </a>
